# cable_machine

./: .gitignore  .gitmodules  AGENTS.md  CMakeCache.txt  README.md  SPECS.md  capacitor.config.json  nextStep.txt  package-lock.json  package.json  plcCode.txt  servo_drive_cad_importmap.html
dragon_gym/: CMakeLists.txt  app.js  coreWorker.js  core_messages.js  core_messages.proto  dataService.js  index.html  main.cpp  package-lock.json  package.json  page-template.html  playwright.config.js  styles.css
dragon_gym/playwright/: workout-flow.spec.js
dragon_gym/public/: index.html  manifest.json
dragon_gym/public/assets/animations/: Fireworks.lottie
dragon_gym/public/assets/background/modern-minimal-cover-design-with-flowing-lines/: be6ada24-3dbc-4638-b46e-d7b0a5c41b83.eps
dragon_gym/src/: App.css  App.js  index.js  setupTests.js
dragon_gym/src/__tests__/: workoutFlow.test.js
dragon_gym/src/api/: sendCommand.js
dragon_gym/src/components/: BottomNav.js  LoadScreen.js
dragon_gym/src/components/elements/: chromeButton.jsx  circleAnimation.txt  fillUpButton.jsx  glassCard.jsx  loadingText.jsx  powerButton.jsx  shadedCard.jsx  spaceButton.jsx  volumeBar.jsx
dragon_gym/src/constants/: appConstants.js
dragon_gym/src/hooks/: useTelemetry.js  useWorkoutEngine.js
dragon_gym/src/pages/: AchievementsPage.js  HistoryPage.js  HomePage.js  LeaguePage.js  ProfilePage.js  ProgramsPage.js  SettingsPage.js
dragon_gym/src/utils/: forceCurveUtils.js  gaugeUtils.js  mathUtils.js  paletteUtils.js  waveUtils.js
dragon_gym/website/: page-template.html
server/: .env  index.js  package-lock.json  package.json
spin/: PlcTask.TcTTO  spin.plcproj
spin/DUTs/: ST_AxisIn.TcDUT  ST_AxisOut.TcDUT  ST_UI_Command.TcDUT  ST_UI_Telemetry.TcDUT
spin/GVLs/: GVL_IO.TcGVL  GVL_UI.TcGVL
spin/POUs/: MAIN.TcPOU
